Fixed scrolling issue on iphone when in portrait mode

--- a/pocketCode/jquerytools.css
+++ b/pocketCode/jquerytools.css
@@ -29,9 +29,9 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    height:200px;
+    height:150px; /* was 200 */
     padding:20px 20px 10px 20px;
-    width:380px;
+    width:285px; /* was 380 (1.9 times the height)*/
     font-size:11px;
     color:#fff;
   }
