--- a/pocketCode/tabs-no-images.css
+++ b/pocketCode/tabs-no-images.css
@@ -20,7 +20,7 @@ ul.css-tabs a {
     float:left;
     font-size:11px;
     display:block;
-    padding:5px 20px;
+    padding:5px 5px; /*was 5px 20px*/
     text-decoration:none;
     border:1px solid #666;
     border-bottom:0px;
@@ -54,7 +54,7 @@ ul.css-tabs a.current {
     border:1px solid #666;
     border-width:0 1px 1px 1px;
     min-height:150px;
-    padding:15px 20px;
+   /* padding:15px 20px; padding inside each tab*/
     background-color:#ddd;
 }
 
